tests/lean/653.lean.expected.out
653.lean:4:14-4:32: error: function expected at
  { }
term has type
  Color ?red ?green ?blue
