tests/lean/653.lean
structure Color
  (red : Nat) (green : Nat) (blue : Nat)

def yellow := Color.mk 255 255 0
